<resources>
    <string name="app_name">CS 446 Project</string>
    <string name="title">Title: </string>
    <string name="artist">Artist: </string>
    <string name="album">Album: </string>
    <string name="time_placeholder">0:00</string>
    <string name="create_session">Create Session</string>
    <string name="join_session">Join Session</string>
    <string name="manage_playlist">Manage Playlist</string>
    <string name="end_session">End Session</string>
    <string name="leave_session">Leave Session</string>
    <string name="exit">Exit</string>
    <string name="join">Join</string>
    <string name="ready_to_play">Ready to play</string>
    <string name="wait_message">Please wait for new participants to download files.</string>
    <string name="session_playlist">playlist</string>
    <string name="participant_joined">&domain_name;new_participant_joined</string>
    <string name="all_participants_ready">&domain_name;all_participants_ready</string>
    <string name="playlist_stopped">&domain_name;playlist_stopped</string>
    <string name="playlist_not_stopped">&domain_name;playlist_not_stopped</string>
    <string name="send_play">&domain_name;send_play</string>
    <string name="send_pause">&domain_name;send_pause</string>
    <string name="send_stop">&domain_name;send_stop</string>
    <string name="receive_play">&domain_name;receive_play</string>
    <string name="receive_pause">&domain_name;receive_pause</string>
    <string name="receive_stop">&domain_name;receive_stop</string>
    <string name="song_finished_downloading">&domain_name;song_finished_downloading</string>
    <string name="user_chose_session">&domain_name;user_chose_session</string>
    <string name="name_of_chosen_session">name_of_chosen_session</string>
    <string name="session_list">session_list</string>
    <string name="waiting_for_songs">Loading songs...</string>
    <string name="playlist_ready">&domain_name;playlist_ready</string>
    <string name="session_playlist_metadata">session_playlist_metadata</string>
    <string name="session_list_ready">&domain_name;session_list_ready</string>
    <string name="session_names_list">session_names_list</string>
    <string name="waiting_for_session_names">Retrieving sessions...</string>
    <string name="session_created">&domain_name;session_created</string>
    <string name="user_looking_to_join_session">&domain_name;user_looking_to_join_session</string>
    <string name="session_name">session_name</string>
    <string name="request_session_playlist">&domain_name;request_session_playlist</string>
    <string name="return_session_playlist">&domain_name;return_session_playlist</string>
    <string name="find_sessions">&domain_name;find_sessions</string>
    <string name="start_session">Start Session</string>
    <string name="enter_session_name">Enter Session Name</string>
    <string name="select_playlist_to_upload_to_session">Select Playlist to Upload to Session:</string>
    <string name="select_songs_to_upload_to_playlist">Select Songs to Upload to Playlist:</string>
    <string name="new_playlist">New Playlist</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="created_session_name">created_session_name</string>
    <string name="song_completed">&domain_name;song_completed</string>
    <string name="current_song_index">current_song_index</string>
    <string name="host_music_player_activity_started">&domain_name;host_music_player_activity_started</string>
    <string name="participant_music_player_activity_started">&domain_name;participant_music_player_activity_started</string>
    <string name="play">&domain_name;play</string>
    <string name="playing_update_GUI">&domain_name;playing_update_GUI</string>
    <string name="pause">&domain_name;pause</string>
    <string name="paused_update_GUI">&domain_name;paused_update_GUI</string>
    <string name="stop">&domain_name;stop</string>
    <string name="stopped_update_GUI">&domain_name;stopped_update_GUI</string>
    <string name="mute">&domain_name;mute</string>
    <string name="muted_update_GUI">&domain_name;muted_update_GUI</string>
    <string name="unmute">&domain_name;unmute</string>
    <string name="unmuted_update_GUI">&domain_name;unmuted_update_GUI</string>
    <string name="update_song_progress">&domain_name;update_song_progress</string>
    <string name="currently_playing_song_index">currently_playing_song_index</string>
    <string name="current_position">current_position</string>
    <string name="other_group_plays">&domain_name;other_group_plays</string>
    <string name="this_group_plays">&domain_name;this_group_plays</string>
    <string name="list_all_device_songs">&domain_name;list_all_device_songs</string>
    <string name="all_device_songs">&domain_name;all_device_songs</string>
    <string name="list_all_app_playlists">&domain_name;list_all_app_playlists</string>
    <string name="all_app_playlists">&domain_name;all_app_playlists</string>
    <string name="list_all_playlist_songs">&domain_name;list_all_playlist_songs</string>
    <string name="all_playlist_songs">&domain_name;all_playlist_songs</string>
    <string name="create_new_playlist">&domain_name;create_new_playlist</string>
    <string name="new_playlist_created">&domain_name;new_playlist_created</string>
    <string name="add_song_to_playlist">&domain_name;add_song_to_playlist</string>
    <string name="song_added_to_playlist">&domain_name;song_added_to_playlist</string>
    <string name="extra_name_playlist">playlist</string>
    <string name="extra_name_arraylist_playlist">arraylist_playlist</string>
    <string name="extra_name_song">song</string>
    <string name="extra_name_arraylist_song">arraylist_song</string>
    <string name="extra_name_linkedlist_song">linkedlist_song</string>
    <string name="extra_name_playlist_name">playlistName</string>
    <string name="extra_name_success">success</string>
</resources>