<?xml version="1.0" encoding="utf-8"?>

<!-- Ke Qiao Chen: I based this file on
https://github.com/quocnguyenvan/media-player-demo/blob/master/app/src/main/res/layout/custom_music_item.xml
but changed the formatting of the widgets from that in the tutorial, since the tutorial implements
play, pause, and stop buttons for each song, whereas I do not but instead show a progress bar,
elapsed time, and remaining time for each song. The tutorial also shows the name of the singer for
each song, whereas I do not. -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewMusicIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/music" />
    
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="15sp"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageViewMusicIcon"
        android:layout_toEndOf="@+id/imageViewMusicIcon" />

    <TextView
        android:id="@+id/textViewArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist"
        android:textSize="15sp"
        android:textColor="#000000"
        android:layout_below="@id/textViewTitle"
        android:layout_toRightOf="@+id/imageViewMusicIcon"
        android:layout_toEndOf="@+id/imageViewMusicIcon" />

    <TextView
        android:id="@+id/textViewAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        android:textSize="15sp"
        android:textColor="#000000"
        android:layout_below="@id/textViewArtist"
        android:layout_toRightOf="@+id/imageViewMusicIcon"
        android:layout_toEndOf="@+id/imageViewMusicIcon" />

    <SeekBar
        android:id="@+id/seekBarSongProgressBar"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewAlbum"
        android:layout_toEndOf="@id/textViewElapsedTime"
        android:layout_toRightOf="@id/textViewElapsedTime"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:max="100" />

    <TextView
        android:id="@+id/textViewElapsedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewAlbum"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/time_placeholder"
        android:textSize="12sp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textViewRemainingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/seekBarSongProgressBar"
        android:layout_toRightOf="@id/seekBarSongProgressBar"
        android:layout_below="@id/textViewAlbum"
        android:text="@string/time_placeholder"
        android:textSize="12sp"
        android:textColor="#000000" />

</RelativeLayout>